<resources>
    <string name="app_name" translatable="false">BuscaPet</string>
    <!-- Telas -->
    <string name="perdi_meu_pet" translatable="false">Perdi meu Pet</string>
    <string name="encontrei_um_pet" translatable="false">Encontrei um Pet</string>
    <string name="acompanhar_meu_pet_perdido" translatable="false">Acompanhar meu Pet perdido</string>
    <string name="ver_pets_perdidos_regiao" translatable="false">Ver Pets perdidos pela região</string>
    <string name="ver_pets_encontrados_regiao" translatable="false">Ver Pets encontrados na região</string>
    <string name="cadasrar_meu_pet" translatable="false">Cadastrar meu Pet</string>

    <!-- Menu -->
    <string name="menu_configuracoes" translatable="false">Configurações</string>
    <string name="title_activity_configuracoes" translatable="false">Configurações</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

    <string name="button_female" translatable="false">Fêmea</string>
    <string name="button_male" translatable="false">Macho</string>
</resources>
