<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCadastrarMeuPet"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/cadasrar_meu_pet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/btnPerdiMeuPet"
        app:layout_constraintTop_toBottomOf="@+id/btnVerPetsPerdidosRegiao" />

    <Button
        android:id="@+id/btnVerPetsEncontradosRegiao"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/ver_pets_encontrados_regiao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcompanharMeuPetPerdido" />

    <Button
        android:id="@+id/btnVerPetsPerdidosRegiao"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/ver_pets_perdidos_regiao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/btnPerdiMeuPet"
        app:layout_constraintTop_toBottomOf="@+id/btnEncontreiUmPet" />

    <Button
        android:id="@+id/btnAcompanharMeuPetPerdido"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/acompanhar_meu_pet_perdido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPerdiMeuPet" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selecione uma das opções:"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btnPerdiMeuPet"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/perdi_meu_pet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnEncontreiUmPet"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/encontrei_um_pet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/btnPerdiMeuPet"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>